<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Place_Hold"
    android:orientation="vertical"
    android:rowCount="12"
    android:columnCount="6">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_upDT"
        android:layout_gravity="center_horizontal"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:id="@+id/dateButton"
        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_column="3"
        android:layout_columnSpan="3"
        android:layout_row="0"
        android:hint="@string/pick_up_date"
        android:id="@+id/dateDisplay"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/r_DT"
        android:layout_gravity="center_horizontal"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:id="@+id/r_dateBtn"
        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_column="3"
        android:layout_columnSpan="3"
        android:layout_row="4"
        android:hint="@string/return_date"
        android:id="@+id/rDateDisplay"
        />

    <Button
        android:id="@+id/submit_dates"
        android:layout_row="5"
        android:layout_column="2"
        android:layout_columnSpan="4"
        android:layout_gravity="center_horizontal"
        android:text="@string/find_available_books"
        />
    <Spinner
        android:id="@+id/book_spinner"
        android:layout_gravity="center_horizontal"
        android:layout_column="1"
        android:layout_columnSpan="4"
        android:layout_row="6"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        />

    <Button
        android:id="@+id/reserve_book"
        android:layout_row="8"
        android:layout_column="2"
        android:layout_columnSpan="4"
        android:layout_gravity="center_horizontal"
        android:text="@string/reserve_bookLbl"
        android:visibility="gone"
        />
</GridLayout>